﻿2012-06-20  Nicole Cordes <cordes@cps-it.de>

	* Investigated in Bug #38173; Tab order radio buttons (Thanks to Björn Heinermann)

2012-06-14  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #37629: Non-mandatory radio checkboxes aren't working

2012-06-13  Nicole Cordes <cordes@cps-it.de>

	* Added t3lib_div::removeXSS functions for proper sanitizing
	* Fixed Bug #37992: urldecoded input "grows" when switching between input and confirmation page (Thanks to Philipp Kitzberger)
	* Fixed Bug #37991: Missing labels on confirmation page (Thanks to Philipp Kitzberger)
	* Fixed Bug #35534: Multiple Steps PHP looses user input in 1.6.6 (Thanks to Philipp Kitzberger)

2012-06-12  Nicole Cordes <cordes@cps-it.de>

	* Fixed back links to last page on multiple pages (server application)
	* Fixed Bug #30157: File Upload: Fields are shown twice (Thanks to Christian Herberger)
	* Fixed Bug #29772: non-mandatory selects are checked by custom validator (Thanks to Jacob)
	* Fixed Bug #29546: prefill doesn't work properly in select-boxes (Thanks to Mischa Heissmann)
	* Fixed Bug #29106: Wrong CSS Class for submit buttons
	* Fixed Task #29156: Replace mysql_* calls (Thanks to Tizian Schmidlin)
	* Fixed Bug #29093: PHP Warning
	* Fixed Bug #28911: DBAL/ADODB Support improvement (Thanks to Tizian Schmidlin)
	* Fixed deprecated functions for TYPO3 4.5

2012-06-11  Nicole Cordes <cordes@cps-it.de>

	* Raised TYPO3 version to 4.5.0
	* Raised Powermail version to 1.7.0-dev

2011-08-08  Alexander Grein <ag@typo3-webagentur.com>

	* Added a Templates for the JavaScript validation
	* Remove plus sign separation for multiple email addresses, because this is also a valid sign in email names
	* Replace cc with bcc in mails to sender/recipients under TYPO3 4.5 using swiftmailer
	* Add feature to disable mandatory validation on server side if the css-class of a field is set to "donotcheckmandatory".
	* Add validation with alpha-w-umlauts and alphanum-w-umlauts
	* Add hook to manipulate pagebrowser