@@ -151,7 +151,9 @@ class tx_powermail_form extends tslib_pibase {
 				$this->InnerMarkerArray['###POWERMAIL_FIELDS###'] = ''; // init
 
 				$select = 'tx_powermail_fieldsets.uid fs_uid, tx_powermail_fields.uid f_uid, tx_powermail_fieldsets.felder fs_fields, ' . 'tx_powermail_fieldsets.title fs_title, tx_powermail_fieldsets.class fs_class, tx_powermail_fields.title f_title, ' . 'tx_powermail_fields.formtype f_type, tx_powermail_fields.flexform f_field, tt_content.tx_powermail_title c_title, ' . 'tx_powermail_fields.fe_field f_fefield, tx_powermail_fields.description f_description, tx_powermail_fields.class f_class';
-				$from = 'tx_powermail_fieldsets ' . 'LEFT JOIN tx_powermail_fields ON tx_powermail_fieldsets.uid = tx_powermail_fields.fieldset ' . 'LEFT JOIN tt_content ON tx_powermail_fieldsets.tt_content = tt_content.uid';
+				$from = 'tx_powermail_fieldsets ' .
+					'LEFT JOIN tx_powermail_fields ON tx_powermail_fieldsets.uid = tx_powermail_fields.fieldset ' .
+					'LEFT JOIN tt_content ON tx_powermail_fieldsets.tt_content = tt_content.uid';
 				$where = 'tx_powermail_fieldsets.tt_content = ' . (($this->cObj->data['_LOCALIZED_UID'] > 0) ? $this->cObj->data['_LOCALIZED_UID'] : $this->cObj->data['uid']) . ' AND tx_powermail_fields.fieldset = ' . $row_fs['uid'] . tslib_cObj::enableFields('tx_powermail_fieldsets') . tslib_cObj::enableFields('tx_powermail_fields');
 				$groupBy = '';
 				$orderBy = 'tx_powermail_fieldsets.sorting, tx_powermail_fields.sorting';
